added HypersonicSQL which now starts automatically when the application's context is started in its container (e.g. Tomcat)
git-svn-id: file:///home/svnroot-zephyrsoft/projects/web-address-book/trunk@265 f37aa4ac-6963-46a2-a1ff-558a307fa857

--- a/web-address-book/build.xml
+++ b/web-address-book/build.xml
@@ -23,7 +23,11 @@
 		<mkdir dir="${dir.build}/WEB-INF/classes" />
 		<mkdir dir="${dir.build}/WEB-INF/lib" />
 		<copy todir="${dir.build}/WEB-INF/lib">
-			<fileset dir="${dir.lib}" />
+			<fileset dir="${dir.lib}">
+				<include name="*.jar" />
+				<exclude name="servlet-api-*" />
+				<exclude name="jsp-api-*" />
+			</fileset>
 		</copy>
 		<copy todir="${dir.build}/WEB-INF">
 			<fileset dir="${dir.src.deploy}" />
@@ -33,7 +37,9 @@
 		</copy>
 		<javac srcdir="${dir.src.app}" destdir="${dir.build}/WEB-INF/classes" debug="${debug}" deprecation="yes">
 			<classpath>
-				<fileset dir="${dir.lib}" />
+				<fileset dir="${dir.lib}">
+					<include name="*.jar"/>
+				</fileset>
 			</classpath>
 		</javac>
 		<copy todir="${dir.build}/WEB-INF/classes">
