--- a/web-address-book/.classpath
+++ b/web-address-book/.classpath
@@ -8,5 +8,9 @@
 	<classpathentry kind="lib" path="lib/Echo3_WebContainer_20100402.jar" sourcepath="lib/Echo3_WebContainer_20100402-src.zip"/>
 	<classpathentry kind="lib" path="lib/jsp-api-2.0.jar" sourcepath="lib/jsp-api-2.0-src.zip"/>
 	<classpathentry kind="lib" path="lib/servlet-api-2.4.jar" sourcepath="lib/servlet-api-2.4-src.zip"/>
+	<classpathentry kind="lib" path="lib/ebean-2.5.1.jar" sourcepath="lib/ebean-2.5.1-src.zip"/>
+	<classpathentry kind="lib" path="lib/hsqldb-1.8.1.2.jar" sourcepath="lib/hsqldb-1.8.1.2-src.zip"/>
+	<classpathentry kind="lib" path="lib/jta-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/persistence-api-1.0.jar" sourcepath="lib/persistence-api-1.0-src.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
