--- a/web-address-book/.classpath
+++ b/web-address-book/.classpath
@@ -12,5 +12,6 @@
 	<classpathentry kind="lib" path="lib/hsqldb-1.8.1.2.jar" sourcepath="lib/hsqldb-1.8.1.2-src.zip"/>
 	<classpathentry kind="lib" path="lib/jta-1.1.jar"/>
 	<classpathentry kind="lib" path="lib/persistence-api-1.0.jar" sourcepath="lib/persistence-api-1.0-src.zip"/>
+	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.12.jar" sourcepath="lib/mysql-connector-java-5.1.12-src.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
