--- a/web-address-book/src/java/ebean.properties
+++ b/web-address-book/src/java/ebean.properties
@@ -8,7 +8,7 @@
 ebean.ddl.generate=true
 ebean.ddl.run=true
 
-ebean.debug.sql=true
+ebean.debug.sql=false
 ebean.debug.lazyload=false
 
 # -------------------------------------------------------------
@@ -26,7 +26,6 @@ ebean.logging.logfilesharing=all
 
 # location of transaction logs 
 ebean.logging.directory=logs
-#ebean.logging.directory=${catalina.base}/logs/trans
 
 # Specific Log levels (none, summary, binding, sql)
 ebean.logging.iud=sql
@@ -42,16 +41,16 @@ ebean.logging.txnCommit=none
 # one of them is defined as the default/primary DataSource
 
 # specify the default/primary DataSource
-datasource.default=hsql
+datasource.default=h2
 
-datasource.hsql.username=SA
-datasource.hsql.password=
-datasource.hsql.databaseUrl=jdbc:hsqldb:hsql://localhost/test
-datasource.hsql.databaseDriver=org.hsqldb.jdbcDriver
-datasource.hsql.minConnections=1
-datasource.hsql.maxConnections=25
-#datasource.hsql.heartbeatsql=select 1
-datasource.hsql.isolationlevel=read_committed
+datasource.h2.username=sa
+datasource.h2.password=
+datasource.h2.databaseUrl=jdbc:h2:tcp://localhost/h2db/test
+datasource.h2.databaseDriver=org.h2.Driver
+datasource.h2.minConnections=1
+datasource.h2.maxConnections=25
+#datasource.h2.heartbeatsql=select 1
+datasource.h2.isolationlevel=read_committed
 
 datasource.mysql.username=test
 datasource.mysql.password=test
