--- a/web-address-book/src/java/ebean.properties
+++ b/web-address-book/src/java/ebean.properties
@@ -5,11 +5,26 @@
 # file external to your war/jar. 
 #load.properties.override=${CATALINA_HOME}/conf/myapp.ebean.properties
 
-ebean.ddl.generate=true
-ebean.ddl.run=true
+ebean.ddl.generate=false
+ebean.ddl.run=false
 
 ebean.debug.sql=false
 ebean.debug.lazyload=false
+
+# enable autofetch
+ebean.autofetch.querytuning=true
+# enable collection of profiling information
+ebean.autofetch.profiling=true
+# implicit autofetch mode
+# default_off, default_on, default_on_if_empty
+ebean.autofetch.implicitmode=default_on
+# minimum amount of profiling to collect before
+# autofetch will start tuning the query
+ebean.autofetch.profiling.min=1
+# profile every query up to base
+ebean.autofetch.profiling.base=10
+# after base collect profiling on 5% of queries
+ebean.autofetch.profiling.rate=0.05
 
 # -------------------------------------------------------------
 # Transaction Logging
@@ -41,7 +56,7 @@ ebean.logging.txnCommit=none
 # one of them is defined as the default/primary DataSource
 
 # specify the default/primary DataSource
-datasource.default=h2
+datasource.default=mysql
 
 datasource.h2.username=sa
 datasource.h2.password=
@@ -52,11 +67,11 @@ datasource.h2.maxConnections=25
 #datasource.h2.heartbeatsql=select 1
 datasource.h2.isolationlevel=read_committed
 
-datasource.mysql.username=test
-datasource.mysql.password=test
-datasource.mysql.databaseUrl=jdbc:mysql://127.0.0.1:3306/test
+datasource.mysql.username=sqlfreund
+datasource.mysql.password=sonnen-schein
+datasource.mysql.databaseUrl=jdbc:mysql://127.0.0.1:3306/wab
 datasource.mysql.databaseDriver=com.mysql.jdbc.Driver
 datasource.mysql.minConnections=1
 datasource.mysql.maxConnections=25
-#datasource.mysql.heartbeatsql=select 1
+datasource.mysql.heartbeatsql=select 1
 datasource.mysql.isolationlevel=read_committed
