added libraries (including their sources) to enable report generation and implemented JasperReport execution
git-svn-id: file:///home/svnroot-zephyrsoft/projects/web-address-book/trunk@274 f37aa4ac-6963-46a2-a1ff-558a307fa857

--- a/web-address-book/build.xml
+++ b/web-address-book/build.xml
@@ -12,6 +12,8 @@
 		<include name="**/*gif" />
 		<include name="**/*jpg" />
 		<include name="**/*png" />
+		<include name="**/*jasper" />
+		<include name="**/*jrxml" />
 	</patternset>
 
 	<target name="clean" description="Clears all generated files, including build directories, distributables, and documentation.">
