--- a/web-address-book/.classpath
+++ b/web-address-book/.classpath
@@ -20,5 +20,17 @@
 	<classpathentry kind="lib" path="lib/echopoint-3.0.0b5.jar" sourcepath="lib/echopoint-3.0.0b5-src.zip"/>
 	<classpathentry kind="lib" path="lib/jasperreports-3.7.4.jar" sourcepath="lib/jasperreports-3.7.4-src.zip"/>
 	<classpathentry kind="lib" path="lib/SuperCSV-1.52.jar" sourcepath="lib/SuperCSV-1.52-src.zip"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar" sourcepath="lib/commons-logging-1.1.1-src.zip"/>
+	<classpathentry kind="lib" path="lib/commons-collections-3.2.1.jar" sourcepath="lib/commons-collections-3.2.1-src.zip"/>
+	<classpathentry kind="lib" path="lib/commons-beanutils-1.8.3.jar" sourcepath="lib/commons-beanutils-1.8.3-src.zip"/>
+	<classpathentry kind="lib" path="lib/commons-digester-2.0.jar" sourcepath="lib/commons-digester-2.0-src.zip"/>
+	<classpathentry kind="lib" path="lib/groovy-1.7.5.jar" sourcepath="lib/groovy-1.7.5-src.zip"/>
+	<classpathentry kind="lib" path="lib/asm-3.3.jar" sourcepath="lib/asm-3.3-src.zip"/>
+	<classpathentry kind="lib" path="lib/asm-analysis-3.3.jar" sourcepath="lib/asm-3.3-src.zip"/>
+	<classpathentry kind="lib" path="lib/asm-commons-3.3.jar" sourcepath="lib/asm-3.3-src.zip"/>
+	<classpathentry kind="lib" path="lib/asm-tree-3.3.jar" sourcepath="lib/asm-3.3-src.zip"/>
+	<classpathentry kind="lib" path="lib/asm-util-3.3.jar" sourcepath="lib/asm-3.3-src.zip"/>
+	<classpathentry kind="lib" path="lib/asm-xml-3.3.jar" sourcepath="lib/asm-3.3-src.zip"/>
+	<classpathentry kind="lib" path="lib/iText-2.1.7.jar" sourcepath="lib/iText-2.1.7-src.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
