small ant fix for annoying warning message
git-svn-id: file:///home/svnroot-zephyrsoft/projects/web-address-book/trunk@276 f37aa4ac-6963-46a2-a1ff-558a307fa857

--- a/web-address-book/build.xml
+++ b/web-address-book/build.xml
@@ -37,7 +37,7 @@
 		<copy todir="${dir.build}">
 			<fileset dir="${dir.src.htdocs}" />
 		</copy>
-		<javac srcdir="${dir.src.app}" destdir="${dir.build}/WEB-INF/classes" debug="${debug}" deprecation="yes">
+		<javac includeAntRuntime="false" srcdir="${dir.src.app}" destdir="${dir.build}/WEB-INF/classes" debug="${debug}" deprecation="yes">
 			<classpath>
 				<fileset dir="${dir.lib}">
 					<include name="*.jar"/>
