--- a/web-address-book/build.xml
+++ b/web-address-book/build.xml
@@ -11,7 +11,9 @@
 		<include name="**/*js" />
 		<include name="**/*gif" />
 		<include name="**/*jpg" />
+		<include name="**/*jpeg" />
 		<include name="**/*png" />
+		<include name="**/*svg" />
 		<include name="**/*jasper" />
 		<include name="**/*jrxml" />
 	</patternset>
