refactoring of subreport generation: subreport designs are now loaded via a static helper class and not via the JasperReports default mechanism anymore
git-svn-id: file:///home/svnroot-zephyrsoft/projects/web-address-book/trunk@281 f37aa4ac-6963-46a2-a1ff-558a307fa857

--- a/web-address-book/build.xml
+++ b/web-address-book/build.xml
@@ -18,6 +18,14 @@
 		<include name="**/*jrxml" />
 	</patternset>
 
+	<taskdef name="jrc" classname="net.sf.jasperreports.ant.JRAntCompileTask"> 
+	  <classpath>
+	    <fileset dir="./lib">
+	      <include name="**/*.jar"/>
+	    </fileset>
+	  </classpath>
+	</taskdef>
+	
 	<target name="clean" description="Clears all generated files, including build directories, distributables, and documentation.">
 		<delete dir="${dir.build}" />
 		<delete dir="${dir.war}" />
@@ -46,6 +54,13 @@
 				</fileset>
 			</classpath>
 		</javac>
+		<jrc srcdir="${dir.src.app}/org/zephyrsoft/wab/report" includes="*.jrxml">
+			<classpath>
+				<fileset dir="${dir.lib}">
+					<include name="*.jar"/>
+				</fileset>
+			</classpath>
+		</jrc>
 		<copy todir="${dir.build}/WEB-INF/classes">
 			<fileset dir="${dir.src.app}">
 				<patternset refid="fileset.resources" />
