--- a/pom.xml
+++ b/pom.xml
@@ -224,6 +224,44 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>license-maven-plugin</artifactId>
+				<version>1.8</version>
+				<configuration>
+					<useMissingFile>true</useMissingFile>
+					<useRepositoryMissingFiles>false</useRepositoryMissingFiles>
+					<deployMissingFile>false</deployMissingFile>
+					<licenseMerges>
+						<licenseMerge>
+							Bouncy Castle License|Bouncy Castle Licence
+						</licenseMerge>
+						<licenseMerge>
+							LGPL|GNU Lesser General Public License|GNU Lesser General Public Licence
+						</licenseMerge>
+						<licenseMerge>
+							CDDL 1.0|Common Development and Distribution License (CDDL) v1.0
+						</licenseMerge>
+						<licenseMerge>
+							BSD|BSD License
+						</licenseMerge>
+						<licenseMerge>
+							GPL 2.0|The GNU General Public License, Version 2
+						</licenseMerge>
+						<licenseMerge>
+							Apache 2.0|The Apache Software License, Version 2.0|Apache License, Version 2.0
+						</licenseMerge>
+					</licenseMerges>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>add-third-party</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<inherited>true</inherited>
@@ -299,6 +337,25 @@
 									</pluginExecutionFilter>
 									<action>
 										<ignore />
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.codehaus.mojo
+										</groupId>
+										<artifactId>
+											license-maven-plugin
+										</artifactId>
+										<versionRange>
+											[1.8,)
+										</versionRange>
+										<goals>
+											<goal>add-third-party</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
 									</action>
 								</pluginExecution>
 							</pluginExecutions>
