--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ install: true
 before_script:
 - export TZ=Europe/Berlin
 
-script: mvn --settings maven-settings.xml clean verify
+script: mvn clean verify
 
 deploy:
   provider: releases
