--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,9 @@ install: true
 
 before_script:
 - export TZ=Europe/Berlin
+- mvn install:install-file -Dfile=lib/echopoint-3.0.0b5.jar -DgroupId=echopoint -DartifactId=echopoint -Dversion=3.0.0b5 -Dpackaging=jar
 
-script: mvn clean verify
+script: mvn -U clean verify
 
 deploy:
   provider: releases
