--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>org.zephyrsoft</groupId>
 	<artifactId>web-address-book</artifactId>
 	<version>1.1.0-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 
 	<name>Web Address Book</name>
 	<description>family-oriented address book</description>
@@ -24,6 +24,13 @@
 		<connection>scm:svn:https://dev.zephyrsoft.org/svn/web-address-book/trunk/</connection>
 		<developerConnection>scm:svn:https://dev.zephyrsoft.org/svn/web-address-book/trunk/</developerConnection>
 	</scm>
+	
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>1.4.4.RELEASE</version>
+		<relativePath/> <!-- lookup parent from repository -->
+	</parent>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -31,48 +38,89 @@
 		<version.java>${java.version}</version.java>
 		
 		<!-- dependency versions -->
-		<version.slf4j>1.7.22</version.slf4j>
 		<version.log4j>2.8</version.log4j>
+		<version.ebean>2.7.3</version.ebean>
+		<version.asm>3.3</version.asm>
+		<version.echo3>3.0.2</version.echo3>
+		<version.echo3-extras>3.0.2</version.echo3-extras>
+		<version.echopoint>3.0.0b5</version.echopoint>
+		<version.itext>2.1.7</version.itext>
+		<version.jasperreports>3.7.4</version.jasperreports>
+		<version.jta>1.1</version.jta>
+		<version.jpa>1.0</version.jpa>
+		<version.supercsv>2.3.1</version.supercsv>
+		<version.xstream>1.3</version.xstream>
 	</properties>
 
 	<dependencies>
+		<!-- pulled up to take precedence over any indirect dependency -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+		</dependency>
+	
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-logging</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-log4j</artifactId>
+				</exclusion>
+				<exclusion>
+					<artifactId>jboss-logging</artifactId>
+					<groupId>org.jboss.logging</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
+	
 		<!-- logging -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>${version.slf4j}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>jcl-over-slf4j</artifactId>
-			<version>${version.slf4j}</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-slf4j-impl</artifactId>
-			<version>${version.log4j}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
-			<version>${version.log4j}</version>
 		</dependency>
 	
 		<dependency>
 			<groupId>org.avaje</groupId>
 			<artifactId>ebean</artifactId>
-			<version>2.7.3</version>
+			<version>${version.ebean}</version>
 		</dependency>
 		<dependency>
 			<groupId>asm</groupId>
 			<artifactId>asm</artifactId>
-			<version>3.3</version>
+			<version>${version.asm}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-beanutils</groupId>
 			<artifactId>commons-beanutils</artifactId>
-			<version>1.8.3</version>
 			<exclusions>
 				<exclusion>
 					<groupId>commons-logging</groupId>
@@ -83,12 +131,10 @@
 		<dependency>
 			<groupId>commons-collections</groupId>
 			<artifactId>commons-collections</artifactId>
-			<version>3.2.2</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-digester</groupId>
 			<artifactId>commons-digester</artifactId>
-			<version>2.0</version>
 			<exclusions>
 				<exclusion>
 					<groupId>commons-logging</groupId>
@@ -100,64 +146,74 @@
 		<dependency>
 			<groupId>com.nextapp</groupId>
 			<artifactId>echo3-app</artifactId>
-			<version>3.0.2</version>
+			<version>${version.echo3}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.nextapp</groupId>
 			<artifactId>echo3-extras</artifactId>
-			<version>3.0.3</version>
+			<version>${version.echo3-extras}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.nextapp</groupId>
 			<artifactId>echo3-webcontainer</artifactId>
-			<version>3.0.2</version>
+			<version>${version.echo3}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.nextapp</groupId>
 			<artifactId>echo3-extras-webcontainer</artifactId>
-			<version>3.0.3</version>
+			<version>${version.echo3-extras}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.nextapp</groupId>
 			<artifactId>echo3-filetransfer</artifactId>
-			<version>3.0.3</version>
+			<version>${version.echo3-extras}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.nextapp</groupId>
+					<artifactId>echo3-webcontainer</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>com.nextapp</groupId>
 			<artifactId>echo3-filetransfer-receiver</artifactId>
-			<version>3.0.3</version>
+			<version>${version.echo3-extras}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.nextapp</groupId>
 			<artifactId>echo3-filetransfer-webcontainer</artifactId>
-			<version>3.0.3</version>
+			<version>${version.echo3-extras}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.nextapp</groupId>
+					<artifactId>echo3-webcontainer</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>echopoint</groupId>
 			<artifactId>echopoint</artifactId>
-			<version>3.0.0b5</version>
+			<version>${version.echopoint}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy</artifactId>
-			<version>1.7.5</version>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<version>1.2.132</version>
 		</dependency>
 		<dependency>
 			<groupId>com.lowagie</groupId>
 			<artifactId>itext</artifactId>
-			<version>2.1.7</version>
+			<version>${version.itext}</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.jasperreports</groupId>
 			<artifactId>jasperreports</artifactId>
-			<version>3.7.4</version>
+			<version>${version.jasperreports}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>commons-logging</groupId>
@@ -169,48 +225,32 @@
 		<dependency>
 			<groupId>javax.transaction</groupId>
 			<artifactId>jta</artifactId>
-			<version>1.1</version>
+			<version>${version.jta}</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.persistence</groupId>
 			<artifactId>persistence-api</artifactId>
-			<version>1.0</version>
+			<version>${version.jpa}</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.supercsv</groupId>
 			<artifactId>super-csv</artifactId>
-			<version>2.3.1</version>
+			<version>${version.supercsv}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.thoughtworks.xstream</groupId>
 			<artifactId>xstream</artifactId>
-			<version>1.3</version>
+			<version>${version.xstream}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.12</version>
-		</dependency>
-
-
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>2.4</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>javax.servlet.jsp</groupId>
-			<artifactId>jsp-api</artifactId>
-			<version>2.0</version>
-			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -234,7 +274,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-install-plugin</artifactId>
-				<version>2.5.2</version>
 				<configuration>
 					<file>${basedir}/lib/echopoint-3.0.0b5.jar</file>
 					<sources>${basedir}/lib/echopoint-3.0.0b5-sources.jar</sources>
@@ -294,7 +333,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.6.0</version>
+				<version>3.6.0</version><!--$NO-MVN-MAN-VER$-->
 				<configuration>
 					<source>${version.java}</source>
 					<target>${version.java}</target>
@@ -304,7 +343,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>3.0.1</version>
+				<version>3.0.1</version><!--$NO-MVN-MAN-VER$-->
 				<executions>
 					<execution>
 						<id>attach-sources</id>
@@ -321,12 +360,12 @@
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-war-plugin</artifactId>
-				<version>3.0.0</version>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>3.0.0</version><!--$NO-MVN-MAN-VER$-->
 				<configuration>
-					<attachClasses>true</attachClasses>
 					<archive>
 						<manifest>
+							<mainClass>org.zephyrsoft.wab.SpringBootStarter</mainClass>
 							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
 							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
 						</manifest>
@@ -337,6 +376,16 @@
 					</archive>
 				</configuration>
 			</plugin>
+			
+	        <plugin>
+	            <groupId>org.springframework.boot</groupId>
+	            <artifactId>spring-boot-maven-plugin</artifactId>
+	            <configuration>
+	            	<attach>true</attach>
+	            	<outputDirectory>${project.build.directory}/distribution</outputDirectory>
+					<finalName>${project.artifactId}</finalName>
+	            </configuration>
+	        </plugin>
 		</plugins>
 
 		<pluginManagement>
