--- a/src/main/resources/ebean.properties
+++ b/src/main/resources/ebean.properties
@@ -60,7 +60,7 @@ datasource.default=mysql
 
 datasource.h2.username=sa
 datasource.h2.password=
-datasource.h2.databaseUrl=jdbc:h2:tcp://localhost/h2db/test
+datasource.h2.databaseUrl=jdbc:h2:mem:testdb
 datasource.h2.databaseDriver=org.h2.Driver
 datasource.h2.minConnections=1
 datasource.h2.maxConnections=25
