migrate to Spring Boot #2

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ before_script:
 - echo "MAVEN_OPTS=-Xmx2g" >~/.mavenrc
 - mvn install:install-file -Dfile=lib/echopoint-3.0.0b5.jar -DgroupId=echopoint -DartifactId=echopoint -Dversion=3.0.0b5 -Dpackaging=jar
 
-script: mvn -X -e clean verify
+script: mvn clean verify
 
 deploy:
   provider: releases
