make JDBC parameters configurable externally

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,5 +2,10 @@ spring.main.banner-mode=off
 spring.jmx.enabled=false
 
 spring.datasource.platform=dev
-wab.databaseName=h2
 spring.h2.console.enabled=true
+
+wab.db.username=sa
+wab.db.password=
+wab.db.url=jdbc:h2:mem:testdb
+wab.db.driver=org.h2.Driver
+wab.db.heartbeat=
