--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,10 @@ spring.main.banner-mode=off
 spring.jmx.enabled=false
 
 spring.datasource.platform=
-wab.databaseName=mysql
+spring.h2.console.enabled=false
+
+wab.db.username=sqlfreund
+wab.db.password=sonnen-schein
+wab.db.url=jdbc:mysql://127.0.0.1:3306/wab
+wab.db.driver=com.mysql.jdbc.Driver
+wab.db.heartbeat=select 1
