--- a/src/main/resources/ebean.properties
+++ b/src/main/resources/ebean.properties
@@ -5,6 +5,8 @@
 # file external to your war/jar. 
 #load.properties.override=${CATALINA_HOME}/conf/myapp.ebean.properties
 
+# TODO all this has to be set manually in SpringBootStarter!
+
 ebean.ddl.generate=false
 ebean.ddl.run=false
 
@@ -48,30 +50,3 @@ ebean.logging.query=sql
 ebean.logging.sqlquery=sql
 
 ebean.logging.txnCommit=none
-
-# -------------------------------------------------------------
-# DataSources (If using default Ebean DataSourceFactory)
-# ------------------------------------------------------------- 
-# You can specify many DataSources (one per EbeanServer)  and 
-# one of them is defined as the default/primary DataSource
-
-# specify the default/primary DataSource
-datasource.default=mysql
-
-datasource.h2.username=sa
-datasource.h2.password=
-datasource.h2.databaseUrl=jdbc:h2:mem:testdb
-datasource.h2.databaseDriver=org.h2.Driver
-datasource.h2.minConnections=1
-datasource.h2.maxConnections=25
-#datasource.h2.heartbeatsql=select 1
-datasource.h2.isolationlevel=read_committed
-
-datasource.mysql.username=sqlfreund
-datasource.mysql.password=sonnen-schein
-datasource.mysql.databaseUrl=jdbc:mysql://127.0.0.1:3306/wab
-datasource.mysql.databaseDriver=com.mysql.jdbc.Driver
-datasource.mysql.minConnections=1
-datasource.mysql.maxConnections=25
-datasource.mysql.heartbeatsql=select 1
-datasource.mysql.isolationlevel=read_committed
