dependency version updates & use maven-versions-plugin for easier dependency management

--- a/src/license/THIRD-PARTY.properties
+++ b/src/license/THIRD-PARTY.properties
@@ -15,6 +15,7 @@
 # - LGPL version 2.1 or later
 # - MIT License
 # - MPL 1.1
+# - MPL 2.0 or EPL 1.0
 # - Mozilla Public License
 # - New BSD License
 # - Public Domain
@@ -24,8 +25,7 @@
 # Please fill the missing licenses for dependencies :
 #
 #
-#Mon Apr 24 20:36:27 CEST 2017
-com.h2database--h2--1.4.194=MPL 2.0 or EPL 1.0
+#Mon Oct 09 21:58:44 CEST 2017
 echopoint--echopoint--3.0.0b5=LGPL 2
 eclipse--jdtcore--3.1.0=Eclipse Public License 1.0
 javax.transaction--jta--1.1=CDDL 1.0
