--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
+# these values should be overridden for production use, e.g. via 
+# java -jar app.jar --spring.config.location=file:/path/to/application.properties
+
 spring.main.banner-mode=off
 spring.jmx.enabled=false
 
-spring.datasource.platform=
-spring.h2.console.enabled=false
+spring.datasource.platform=dev
+spring.h2.console.enabled=true
 
-wab.db.username=sqlfreund
-wab.db.password=sonnen-schein
-wab.db.url=jdbc:mysql://127.0.0.1:3306/wab
-wab.db.driver=com.mysql.jdbc.Driver
-wab.db.heartbeat=select 1
+wab.db.username=sa
+wab.db.password=
+wab.db.url=jdbc:h2:mem:testdb
+wab.db.driver=org.h2.Driver
+wab.db.heartbeat=
