--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.4.RELEASE</version>
+		<version>1.5.7.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -39,17 +39,17 @@
 		
 		<!-- dependency versions -->
 		<version.log4j>2.8</version.log4j>
-		<version.ebean>2.7.3</version.ebean>
+		<version.ebean>2.8.1</version.ebean>
 		<version.asm>3.3</version.asm>
 		<version.echo3>3.0.2</version.echo3>
-		<version.echo3-extras>3.0.2</version.echo3-extras>
+		<version.echo3-extras>3.0.3</version.echo3-extras>
 		<version.echopoint>3.0.0b5</version.echopoint>
 		<version.itext>2.1.7</version.itext>
 		<version.jasperreports>3.7.4</version.jasperreports>
 		<version.jta>1.1</version.jta>
 		<version.jpa>1.0</version.jpa>
-		<version.supercsv>2.3.1</version.supercsv>
-		<version.xstream>1.3</version.xstream>
+		<version.supercsv>2.4.0</version.supercsv>
+		<version.xstream>1.4.10</version.xstream>
 		<version.validation-api>1.0.0.GA</version.validation-api>
 		<version.hibernate-validator>4.2.0.Final</version.hibernate-validator>
 	</properties>
@@ -71,7 +71,6 @@
 	</dependencyManagement>
 
 	<dependencies>
-		<!-- pulled up to take precedence over any indirect dependency -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
@@ -300,9 +299,15 @@
 	<build>
 		<plugins>
             <plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>versions-maven-plugin</artifactId>
+				<version>2.5</version><!--$NO-MVN-MAN-VER$-->
+			</plugin>
+			
+			<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
-                <version>1.4.1</version>
+                <version>1.4.1</version><!--$NO-MVN-MAN-VER$-->
                 <executions>
                     <execution>
                         <id>enforce-banned-dependencies</id>
