--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,12 @@
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-jdbc</artifactId>
+		    <exclusions>
+		    	<exclusion>
+		    		<groupId>ch.qos.logback</groupId>
+		    		<artifactId>logback-classic</artifactId>
+		    	</exclusion>
+		    </exclusions>
 		</dependency>
 	
 		<!-- logging -->
