--- a/pom.xml
+++ b/pom.xml
@@ -311,6 +311,13 @@
 			<email>dev@zephyrsoft.org</email>
 		</developer>
 	</developers>
+	
+	<repositories>
+	    <repository>
+	        <id>local-repo</id>
+	        <url>file://${basedir}/local-repo</url>
+	    </repository>
+	</repositories>
 
 	<build>
 		<plugins>
@@ -350,27 +357,6 @@
                 </executions>
             </plugin>
 
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-install-plugin</artifactId>
-				<configuration>
-					<file>${basedir}/lib/echopoint-3.0.0b5.jar</file>
-					<sources>${basedir}/lib/echopoint-3.0.0b5-sources.jar</sources>
-					<groupId>echopoint</groupId>
-					<artifactId>echopoint</artifactId>
-					<version>3.0.0b5</version>
-					<packaging>jar</packaging>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>install-file</goal>
-						</goals>
-						<phase>initialize</phase>
-					</execution>
-				</executions>
-			</plugin>
-		
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>license-maven-plugin</artifactId>
