--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
 		<version.java>${java.version}</version.java>
 
 		<!-- dependency versions -->
+		<version.h2>1.4.198</version.h2>
 		<version.jackson>2.9.8</version.jackson>
 		<version.log4j>2.10.0</version.log4j>
 		<version.ebean>2.8.1</version.ebean>
@@ -84,6 +85,11 @@
 				<groupId>com.fasterxml.jackson.module</groupId>
 				<artifactId>jackson-module-parameter-names</artifactId>
 				<version>${version.jackson}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.h2database</groupId>
+			    <artifactId>h2</artifactId>
+			    <version>${version.h2}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
