--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,8 @@
 		<!-- dependency versions -->
 		<version.h2>1.4.198</version.h2>
 		<version.mysql-client>[8.0.16,)</version.mysql-client>
-		<version.jackson>2.9.9.1</version.jackson>
+		<version.jackson-core>2.9.9.3</version.jackson-core>
+		<version.jackson>2.9.9</version.jackson>
 		<version.log4j>2.10.0</version.log4j>
 		<version.ebean>2.8.1</version.ebean>
 		<version.asm>3.3</version.asm>
@@ -70,7 +71,7 @@
 			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-databind</artifactId>
-				<version>${version.jackson}</version>
+				<version>${version.jackson-core}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.fasterxml.jackson.datatype</groupId>
