--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.7.RELEASE</version>
+		<version>2.1.8.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -40,8 +40,7 @@
 		<!-- dependency versions -->
 		<version.h2>1.4.198</version.h2>
 		<version.mysql-client>[8.0.16,)</version.mysql-client>
-		<version.jackson-core>2.9.9.3</version.jackson-core>
-		<version.jackson>2.9.9</version.jackson>
+		<version.jackson>2.10.0.pr3</version.jackson>
 		<version.log4j>2.10.0</version.log4j>
 		<version.ebean>2.8.1</version.ebean>
 		<version.asm>3.3</version.asm>
@@ -71,7 +70,7 @@
 			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-databind</artifactId>
-				<version>${version.jackson-core}</version>
+				<version>${version.jackson}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.fasterxml.jackson.datatype</groupId>
