--- a/src/license/THIRD-PARTY.properties
+++ b/src/license/THIRD-PARTY.properties
@@ -3,15 +3,16 @@
 # Already used licenses in project :
 # - 3-Clause BSD License
 # - Apache 2.0
-# - Apache License 2.0
 # - Apache License, version 2.0
 # - BSD
-# - BSD Licence 3
-# - BSD style
+# - BSD License 3
+# - BSD-3-Clause
 # - Bouncy Castle License
 # - CDDL 1.0
 # - EPL 2.0
+# - Eclipse Public License - v 1.0
 # - Eclipse Public License 1.0
+# - GNU Library General Public License v2.1 or later
 # - GPL 2.0
 # - GPL2 w/ CPE
 # - Indiana University Extreme! Lab Software License, vesion 1.1.1
@@ -29,8 +30,9 @@
 # Please fill the missing licenses for dependencies :
 #
 #
-#Thu Mar 26 19:22:49 CET 2020
+#Sat Nov 21 19:38:22 CET 2020
 echopoint--echopoint--3.0.0b5=LGPL 2
 javax.transaction--jta--1.1=CDDL 1.0
 xml-apis--xml-apis--1.3.02=Apache 2.0
 eclipse--jdtcore--3.1.0=Eclipse Public License 1.0
+javax.persistence--persistence-api--1.0.2=CDDL 1.0
