--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.4.5</version>
+		<version>2.5.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -49,12 +49,13 @@
 		<version.jta>1.1</version.jta>
 		<version.jpa>1.0.2</version.jpa>
 		<version.supercsv>2.4.0</version.supercsv>
-		<version.xstream>1.4.16</version.xstream>
+		<version.xstream>1.4.17</version.xstream>
 		<version.hibernate-commons-annotations>5.1.0.Final</version.hibernate-commons-annotations>
 		<version.commons-beanutils>1.9.4</version.commons-beanutils>
 		<version.commons-collections>3.2.2</version.commons-collections>
 		<version.commons-digester>2.1</version.commons-digester>
 		<version.commons-fileupload>1.4</version.commons-fileupload>
+		<version.commons-io>2.7</version.commons-io>
 		<version.junit>4.13.2</version.junit>
 	</properties>
 
@@ -79,6 +80,11 @@
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
 				<version>${version.junit}</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-io</groupId>
+				<artifactId>commons-io</artifactId>
+				<version>${version.commons-io}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
